Systre 1.1.5:

  Bug fixes:
    - The smallest non-bonded distance reported was occasionally incorrect.
    - The test for degenerate unit cells could miss certain degeneracies.
    - If the output file extension is unknown, a reasonable default is chosen.

- Output can be saved to file after 'Cancel' even when the computation freezes.
- Translational freedom, if any, is used to improve the output node positions.
- The embedding step can now be skipped altogether.
- A connectivity value of 0 for an atom is now read as 'undetermined'.
- The GUI version now has an option to process whole files without stopping.
- Integer numbers in input files may now start with a '+' character.
- Made archives of RCSR nets and zeolite frameworks current as of 2008-07-07.
- Abbreviated Herman-Mauguin symbols for monoclinic groups are now recognized.

Systre 1.1.4:

- Missing abbreviated Herman-Mauguin symbols are mentioned in the help file.

Systre 1.1.3:

- If edges are computed, vertex-degrees are no longer silently changed.
- Better cell vectors are now found for monoclinic groups.
- Bug fix: some monoclinic groups could produce invalid (and suppressed) output.

Systre 1.1.2:

- The program is now more responsive to the cancel button.


Systre 1.1.1:

- The computation of coordination sequences now stops at 10000 nodes.
- Interlocking nets are now processed component-wise (EXPERIMENTAL).
- Archives and Delaney symbol files as input now work in command line version.
- The command line version now accepts most of the options available via GUI.
- The output for nets with errors is no longer left out from the ".out" file.
- Archive and Delaney symbol files can again be processed as regular input.
- The default relaxation step limit is now 10000 (instead of 1000).
- Locally stable crystallographic nets are now accepted (EXPERIMENTAL).


Systre 1.1.0:

- File name extensions are now case insensitive (so ".CGD" works like ".cgd").
- Unit cell volumes are now reported.